# LeNet-5

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: lenet5_theory.md
scripts/: README.md  train.py
src/lenet5/: data.py  model.py
